k8s/istio/bin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-istio-telemetry
  namespace: istio-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-istio-telemetry
  template:
    metadata:
      labels:
        app: httpbin-istio-telemetry
    spec:
      containers:
        - image: kennethreitz/httpbin
          name: httpbin-istio-telemetry
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 256Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-istio-telemetry-service
  namespace: istio-telemetry
  labels:
    app: httpbin-istio-telemetry
spec:
  selector:
    app: httpbin-istio-telemetry
  ports:
    - name: http
      port: 80
      targetPort: 80
