k8s/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: telemetry-gateway
  namespace: istio-telemetry
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telemetry-gateway-vs
  namespace: istio-telemetry
spec:
  hosts:
    - "*"
  gateways:
    - telemetry-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: httpbin-istio-telemetry-service
            port:
              number: 80
